k8s/lob/member-v2/dash-test1-service-member-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-v2
  namespace: dash-test1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: member-v2
