k8s/lob/member-v2/dash-test1-ingress-member-v2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-v2-ingress
  namespace: dash-test1
spec:
  ingressClassName: nginx
  rules:
  - host: test1-subdomain.domain.com
    http:
      paths:
      - backend:
          service:
            name: member-v2
            port:
              number: 80
        path: /
        pathType: Prefix
